<resources>
    <string name="app_name" translatable="false">WordView</string>
    <string name="editors_pick">Editor\'s picks</string>
    <string name="music">Music</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="learning_language">Learning language</string>
    <string name="the_language_that_you_want_to_learn">The language that you want to learn: %1$s</string>
    <string name="composer_mode">Composer Mode</string>
    <string name="provides_more_information_in_the_player_that_helps_writing_lyrics">Provides advanced information in the player</string>
    <string name="settings">Settings</string>
    <string name="api_endpoint">API endpoint</string>
    <string name="search_for_music_artists_albums">Search for music, artists, albums…</string>
    <string name="translate_the_phrase_bellow_using_the_words_at_the_bottom">Translate the phrase bellow using the words at the bottom:</string>
    <string name="check">Check</string>
    <string name="proceed">Proceed</string>
    <string name="correct_answer">Correct!</string>
    <string name="wrong_answer">Wrong!</string>
    <string name="you_answered_correctly_click_proceed_to_continue_the_lesson">You answered correctly! Click proceed to continue the lesson.</string>
    <string name="you_wrongly_translated_the_phrase_the_correct_order_is">You wrongly translated the phrase! The correct order is:</string>
    <string name="answer_precision">%1$s%% answer precision</string>
    <string name="correct">Correct: %1$s</string>
    <string name="misses">Misses: %1$s</string>
    <string name="words_revised">Words revised</string>
    <string name="not_enough_words">Not enough words</string>
    <string name="there_were_not_enough_words_in_the_song_to_create_a_lesson">There were not enough words in the song to create a lesson.</string>
    <string name="go_back">Go back</string>
    <string name="finish_lesson">Finish lesson?</string>
    <string name="your_progress_will_be_lost_your_timer_will_be_paused_and_recovered_in_the_next_lesson">Your progress will be lost. Your timer will be paused and recovered in the next lesson.</string>
    <string name="finish">Finish</string>
    <string name="dismiss">Dismiss</string>
    <string name="an_error_has_occurred">"An error has occurred: "</string>
    <string name="couldn_t_find_any_lyrics_for">Couldn\'t find any lyrics for \'%1$s\'</string>
    <string name="try_again">Try again</string>
    <string name="this_email_is_already_in_use">This email is already in use</string>
    <string name="username_cannot_contain_special_characters">username cannot contain special characters</string>
    <string name="this_email_address_has_not_yet_been_registered">This email address has not yet been registered</string>
    <string name="incorrect_credentials">Incorrect credentials</string>
    <string name="search">Search</string>
    <string name="could_not_connect_to_the_server">Could not connect to the server</string>
    <string name="lesson_results">Lesson Results</string>
    <string name="statistics">Statistics</string>
    <string name="words_learned">Words learned</string>
    <string name="accuracy">Accuracy</string>
    <string name="praticed_words">Praticed words</string>
    <string name="words">Words</string>
    <string name="no_connection">No connection</string>
    <string name="portuguese">Portuguese</string>
    <string name="english">English</string>
    <string name="japanese">Japanese</string>
    <string name="history">History</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log In</string>
    <string name="watched_at">Watched at %1$s</string>
    <string name="great_compatibility">Great compatibility</string>
    <string name="failed_to_complete_search">Failed to complete search</string>
    <string name="continue_watching">Continue watching</string>
    <string name="export_logs">Export logs</string>
    <string name="export_the_application_logs_up_until_this_point">Export the application logs up until this point</string>
    <string name="app_crashed">App crashed</string>
    <string name="oops_something_went_wrong">Oops! Something went wrong</string>
    <string name="the_app_encountered_an_unexpected_error">The app encountered an unexpected error.\n</string>
    <string name="restart_application">Restart Application</string>
    <string name="export_crash_logs">Export Crash Logs</string>
    <string name="toggles_the_visibility_of_the_background_image">Toggles the visibility of the background image</string>
    <string name="background_image">Background image</string>
    <string name="playback_speed">Playback speed</string>
    <string name="player_settings">Player Settings</string>
    <string name="video">Video</string>
</resources>